[modify]adjust space

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ title:	Legolas Blogs
 						&nbsp;
 						<a><i class="glyphicon glyphicon-paperclip"></i></a>
 						{% for category in item.categories %}
-							<a href="{{ category | prepend: '/categories#' | append: '-ref' }}">&nbsp;{{ category }}&nbsp;</a>
+							<a href="{{ category | prepend: '/categories#' | append: '-ref' }}">{{ category }}&nbsp;</a>
 						{% endfor %}
 						&nbsp;
 						<a><i class="glyphicon glyphicon-tags"></i></a>
 						{% for tag in item.tags %}
-							<a href="{{ tag | prepend: '/tags#' | append: '-ref' }}">&nbsp;{{ tag }}&nbsp;</a>
+							<a href="{{ tag | prepend: '/tags#' | append: '-ref' }}">{{ tag }}&nbsp;</a>
 						{% endfor %}
 					</div>
 				</header>
