--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title:	Legolas Blogs
 				</header>
 				<article>
 					{% if item.excerpt %}
-						<p>{{ item.excerpt }}</p>
+						<p>{{ item.excerpt | markdownify }}</p>
 					{% else %}
 						<p>{{ item.content | slice: 0,100 }}</p>
 					{% endif %}
